[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allan_variance"
version = "0.1.0"
authors = [
  { name="kwan3217", email="kwan3217@gmail.com" },
]
description = "Allan variance video"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies=[
    "kwanmath @ git+ssh://git@github.com/kwan3217/kwanmath.git",
]

[project.urls]
Homepage = "https://github.com/kwan3217/allan_variance/"
Issues = "https://github.com/kwan3217/allan_variance/issues"
